# mlp-mixer

./: pyproject.toml
configs/: config.yaml
configs/model/: mlp_mixer.yaml
configs/sweeps/: sweeps.yaml
configs/training/: default.yaml
src/adapters/: data_adapter.py  model_adapter.py  training_adapter.py
src/adapters/architectures/: mlp_mixer.py
src/cli/: train_cli.py
src/core/use_cases/: train.py
src/ports/: data_loader.py  model.py  training.py
