[project]
name = "mlp-mixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.12.0",
    "hydra-core>=1.3.4",
    "hydra-optuna-sweeper>=1.2.0",
    "optuna>=4.9.0",
    "optuna-dashboard>=0.20.0",
    "ruff>=0.15.22",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.69.0",
]
